Springboot-k8s/account-db-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-db-deployment
  labels:
    app: accountdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accountdb
  template:
    metadata:
      labels:
        app: accountdb
    spec:
      containers:
        - name: accountdb
          image: mongodb:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: account-db-service
spec:
  selector:
    app: accountdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
