Springboot-k8s/account-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-app
  labels:
    app: account-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service-app
  template:
    metadata:
      labels:
        app: account-service-app
    spec:
      containers:
        - name: account-service-app
          image: nebyatweb/account-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9001

---
apiVersion: v1
kind: Service
metadata:
  name: account-service-svc
spec:
  ports:
    - targetPort: 9001
      port: 9001
  selector:
    app: account-service-app
