Springboot-k8s/cloud-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
  labels:
    app: cloud-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway-app
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
        - name: cloud-gateway-app
          image: nebyatweb/cloud-gateway:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9191

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
  type: LoadBalancer
  ports:
    - port: 9191
      targetPort: 9191
      protocol: TCP
  # externalIPs:
  #   - 192.168.1.104
  selector:
    app: cloud-gateway-app

    # type: NodePort
    # nodePort: 30000
