Springboot-k8s/order-db-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db-deployment
  labels:
    app: orderdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderdb
  template:
    metadata:
      labels:
        app: orderdb
    spec:
      containers:
        - name: orderdb
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: order-db-service
spec:
  selector:
    app: orderdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
