Springboot-k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-app
  labels:
    app: order-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-app
  template:
    metadata:
      labels:
        app: order-service-app
    spec:
      containers:
        - name: order-service-app
          image: nebyatweb/order-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9011

---
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
spec:
  ports:
    - targetPort: 9011
      port: 80
  selector:
    app: order-service-app
