Springboot-k8s/payment-db-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db-deployment
  labels:
    app: paymentdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentdb
  template:
    metadata:
      labels:
        app: paymentdb
    spec:
      containers:
        - name: paymentdb
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db-service
spec:
  selector:
    app: paymentdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
