Springboot-k8s/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-app
  labels:
    app: payment-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service-app
  template:
    metadata:
      labels:
        app: payment-service-app
    spec:
      containers:
        - name: payment-service-app
          image: nebyatweb/payment-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9031

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-svc
spec:
  ports:
    - targetPort: 9031
      port: 80
  selector:
    app: payment-service-app
