Springboot-k8s/product-db-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db-deployment
  labels:
    app: productdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productdb
  template:
    metadata:
      labels:
        app: productdb
    spec:
      containers:
        - name: productdb
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: product-db-service
spec:
  selector:
    app: productdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
