Springboot-k8s/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-app
  labels:
    app: product-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service-app
  template:
    metadata:
      labels:
        app: product-service-app
    spec:
      containers:
        - name: product-service-app
          image: nebyatweb/product-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9021

---
apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
spec:
  ports:
    - targetPort: 9021
      port: 80
  selector:
    app: product-service-app
